fixed title size on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -53,4 +53,7 @@
   .project-card-mobile{
     width:100%;
   }
+  /* .job-title{
+
+  } */
 }
